configure kafka as an output in redpanda connect stream

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,3 +6,10 @@ services:
       - "9092:9092"
     volumes:
       - .local/kafka:/var/lib/kafka
+    networks:
+      - local
+
+networks:
+  local:
+    driver: bridge
+    name: go-redpanda-local
