--- a/connect.yaml
+++ b/connect.yaml
@@ -1,21 +1,3 @@
-http:
-  enabled: true
-  address: 0.0.0.0:4195
-  root_path: /benthos
-  debug_endpoints: false
-  cert_file: ""
-  key_file: ""
-  cors:
-    enabled: false
-    allowed_origins: []
-  basic_auth:
-    enabled: false
-    realm: restricted
-    username: ""
-    password_hash: ""
-    algorithm: sha256
-    salt: ""
-
 input:
   stdin: {}
 
@@ -31,7 +13,10 @@ pipeline:
   ]
 
 output:
-  stdout: {}
+  kafka:
+    addresses:
+      - broker:9092
+    topic: spicypanda
 
 input_resources: []
 processor_resources: []
