--- a/connect.yaml
+++ b/connect.yaml
@@ -8,11 +8,7 @@ buffer:
 
 pipeline:
   threads: -1
-  processors: [
-    {
-      mapping: root = content().uppercase()
-    }
-  ]
+  processors: []
 
 output:
   kafka:
